--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,5 +1,5 @@
 {% extends 'bootstrap/base.html' %}
-<!DOCTYPE html>
+<!---<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,15 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body> -->
     {% macro displayNewsList(news_list) %}
-    
     {% for news in news_list %}
-    <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 news-card">
-        <!--<img src = " {{ news.poster}}" alt="{{news.title}} poster" class="img-responsive">-->
+    <div class="col-md-2" class="source" style="margin: 20px;border: 2px solid #ccc; background-size: cover; background-color: lightgrey;height: 150px;padding: 60px 0px;border-radius: 4px;box-shadow: 0 0 25px grey">	
+				
+        <p class="text-center" style="font-style: bold;font-size: 18px;background-color: rgba(0,0,0,1);">{{news.id}}</p>
+
+</div>
+</a>
+{% endfor %}
+{% endmacro %}
+
+{% macro displayArticlesList(articles_list) %}
+{% for article in articles_list %}
+<div style="margin: 20px;border: 2px solid #ccc;background-color: #FEFBF7;border-radius: 4px;box-shadow: 0 0 25px #ddd">
+    <div class="row" style="padding: 5px">
+        <div class="col-md-3" style="text-align: center">
+            <img alt="{{article.title}}" style="width: 100%; height: 100%">
+        </div>
+        <div class="col-md-9">
+            <a target="_blank" href="{{article.url}}">
+                <h4 style="font-weight: 700">{{article.title}}</h4>
+            </a>
+            <p><small style="font-style: italic;">written by {{article.author}} on {{article.date}}</small></p>
+            <p>{{article.description | truncate(135)}}</p>
+            <a target="_blank" href="{{article.url}}">
+                <button class="btn btn-sm btn-default" style="color: #0d47a1">Read more</button>
+            </a>
+        </div>
+    </div>
+</div>
+{% endfor %}
+{% endmacro %}
+
+
+
+
+
+   <!----<div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 news-card">
+        <img src = " {{ news.poster}}" alt="{{news.title}} poster" class="img-responsive">
         
          <li>
-             <a href ="/news/{{news.id}}">
+             <a href ="/news/{{}}">
             {{news.title|truncate(10)}}
              </a>
             </li>
@@ -25,4 +59,4 @@
     {% endfor %}
 {% endmacro %}
 </body>
-</html>
+</html> -->
