--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,39 +1,33 @@
-{% extends 'bootstrap/base.html' %}
-    {% macro displayNewsList(news_list) %}
-    {% for news in news_list %}
-    <div class="col-md-2" class="source" style="margin: 20px;border: 2px solid #ccc; background-size: cover; background-color: lightgrey;height: 150px;padding: 60px 0px;border-radius: 4px;box-shadow: 0 0 25px grey">	
-				
-        <p class="text-center" style="font-style: bold;font-size: 18px;background-color: rgba(0,0,0,1);">{{news.id}}</p>
-
-</div>
-</a>
+{% macro displayNewsList(category) %}
+    {% for news in category %}
+    <div class="col-md-2" class="source" style="margin: 20px;border: 2px solid #ccc; background-size: cover; background-color: lightgrey;height: 150px;padding: 60px 0px;border-radius: 4px;box-shadow: 0 0 25px rgb(39, 20, 212)">
+    <p class="text-center" style="font-style: bold;font-size: 18px;background-color: rgba(0,0,0,1);">{{news.id}}</p>
+    <p class="text-center" style="font-style: bold;font-size: 18px;background-color: rgba(0,0,0,1);">{{news.title}}</p>
+    <a href ="{{id}}">Read Articles</a>   
+</div> 
 {% endfor %}
 {% endmacro %}
 
 {% macro displayArticlesList(articles_list) %}
 {% for article in articles_list %}
-<div style="margin: 20px;border: 2px solid #ccc;background-color: #FEFBF7;border-radius: 4px;box-shadow: 0 0 25px #ddd">
-    <div class="row" style="padding: 5px">
-        <div class="col-md-3" style="text-align: center">
-            <img alt="{{article.title}}" style="width: 100%; height: 100%">
-        </div>
-        <div class="col-md-9">
-            <a target="_blank" href="{{article.url}}">
-                <h4 style="font-weight: 700">{{article.title}}</h4>
-            </a>
-            <p><small style="font-style: italic;">written by {{article.author}} on {{article.date}}</small></p>
-            <p>{{article.description | truncate(135)}}</p>
-            <a target="_blank" href="{{article.url}}">
-                <button class="btn btn-sm btn-default" style="color: #0d47a1">Read more</button>
-            </a>
-        </div>
+    <div style="margin: 20px;border: 2px solid #ccc;background-color: #FEFBF7;border-radius: 4px;box-shadow: 0 0 25px #ddd">
+            <div class="row" style="padding: 5px">
+                <div class="col-md-3" style="text-align: center">
+                    <img src="{{article.image}}" alt="{{article.title}}" style="width: 100%; height: 100%">
+                </div>
+                <div class="col-md-9">
+                    <a target="_blank" href="{{article.url}}">
+                        <h4 style="font-weight: 700">{{article.title}}</h4>
+                    </a>
+                    <p><small style="font-style: italic;">written by {{article.author}} on {{article.date}}</small></p>
+                    <p>{{article.description | truncate(135)}}</p>
+                    <a target="_blank" href="{{article.url}}">
+                        <button class="btn btn-sm btn-default" style="color: black">Read Articles</button>
+                    </a>
+                </div>
+            </div>
     </div>
-</div>
 {% endfor %}
 {% endmacro %}
-
-
-
-
 
    
