--- a/app/templates/articles.html
+++ b/app/templates/articles.html
@@ -13,7 +13,7 @@
 <main class="container-fluid">
        
     <div class="articles">
-        <h3><img  alt="" width="150px" height="75px"> | {{id}} | Top News Articles</h3>
+        <h3><img  alt="" width="150px" height="75px"> | {{id}} Top News Articles</h3>
 		<hr />
         <ul class="unstyled">
             <div>
