--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -12,7 +12,7 @@
     <div style="margin: 20px;border: 2px solid #ccc;background-color: #FEFBF7;border-radius: 4px;box-shadow: 0 0 25px #ddd">
             <div class="row" style="padding: 5px">
                 <div class="col-md-3" style="text-align: center">
-                    <img src="{{article.image}}" alt="{{article.title}}" style="width: 100%; height: 100%">
+                    <img src="{{article.image}}" style="width: 100%; height: 100%">
                 </div>
                 <div class="col-md-9">
                     <a target="_blank" href="{{article.url}}">
